--- a/styles/index.css
+++ b/styles/index.css
@@ -119,7 +119,7 @@ input[type='number'] {
   color: var(--color-link);
 }
 
-#badrequest{
+#badrequest {
   display: table;
   width: 100%;
   height: 100vh;
@@ -128,19 +128,23 @@ input[type='number'] {
   transition: all 0.6s;
 }
 
-.fof{
+.fof {
   display: table-cell;
   vertical-align: middle;
 }
 
-.fof h1{
+.fof h1 {
   font-size: 50px;
   display: inline-block;
   padding-right: 12px;
-  animation: type .5s alternate infinite;
+  animation: type 0.5s alternate infinite;
 }
 
-@keyframes type{
-  from{box-shadow: inset -3px 0px 0px #888;}
-  to{box-shadow: inset -3px 0px 0px transparent;}
+@keyframes type {
+  from {
+    box-shadow: inset -3px 0px 0px #888;
+  }
+  to {
+    box-shadow: inset -3px 0px 0px transparent;
+  }
 }
