--- a/styles/index.css
+++ b/styles/index.css
@@ -108,6 +108,16 @@ input[type='number'] {
   margin-bottom: 10px;
 }
 
+.payment-disclaimer {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.payment-emoji {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
 .checkbox-div {
   margin-bottom: 20px;
 }
